# pgboss-rs

./: .gitignore  Cargo.toml  LICENSE-MIT  Makefile  README.md
.github/: dependabot.yml
.github/workflows/: check.yml  scheduled.yml  test.yml
docker/: compose.yaml  postgres.Dockerfile  postgresql.conf
src/: app.rs  client.rs  error.rs  job.rs  lib.rs  queue.rs  stmt.rs  utils.rs
src/client/: builder.rs  mod.rs  opts.rs  public.rs
src/client/public/: connect_ops.rs  job_ops.rs  mod.rs  queue_ops.rs
src/job/: mod.rs
src/sql/: ddl.rs  dml.rs  mod.rs  proc.rs
tests/e2e/: client.rs  job.rs  job_change_state.rs  job_complete.rs  job_delete.rs  job_fail.rs  job_fetch.rs  job_send.rs  main.rs  queue.rs  utils.rs
