[package]
name = "pgboss"
version = "0.1.0"
edition = "2021"
authors = ["Pavel Mikhalkevich <paul.michelle.prod@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust implementation of PgBoss job queueing service"
repository = "https://github.com/rustworthy/pgboss-rs.git"
keywords = ["pgboss", "postgres", "queue", "worker", "job"]
categories = ["asynchronous"]

exclude = [".github", "docker", ".gitignore", "Makefile"]

[features]
default = []

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "=0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.63"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

[dev-dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.39.2", features = ["macros", "rt"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
