[package]
name = "pgboss"
version = "0.1.0-rc1"
edition = "2021"
authors = ["Pavel Mikhalkevich <paul.michelle.prod@gmail.com>"]
license = "MIT OR Apache-2.0"
description = "Rust implementation of PgBoss job queueing service"
repository = "https://github.com/rustworthy/pgboss-rs.git"
keywords = ["pgboss", "postgres", "queue", "worker", "job"]
categories = ["asynchronous"]

exclude = [".github", "docker", ".gitignore", "Makefile"]

[features]
default = []
binaries = ["dep:clap", "dep:tracing-subscriber", "dep:tokio", "dep:lazy_static"]

[dependencies]
chrono = { version = "0.4.38", features = ["serde"] }
log = "0.4.22"
serde = { version = "1.0.208", features = ["derive"] }
serde_json = "1.0.127"
sqlx = { version = "=0.8.2", features = [
    "runtime-tokio",
    "postgres",
    "chrono",
    "uuid",
] }
thiserror = "1.0.63"
tracing = "0.1.40"
uuid = { version = "1.10.0", features = ["v4", "serde"] }

clap = { version = "4", features = ["derive"], optional = true }
tracing-subscriber = { version = "0.3", optional = true }
tokio = { version = "1.39", features = [
    "macros",
    "rt-multi-thread",
], optional = true }
lazy_static = { version = "1.5.0", optional = true }

[dev-dependencies]
lazy_static = "1.5.0"
tokio = { version = "1.39.2", features = ["macros", "rt"] }
sqlx = { version = "0.8.0", features = [
    "runtime-tokio",
    "postgres",
    "tls-rustls",
] }
tokio-test = "0.4.4"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[[bin]]
name = "loadtest"
path = "src/bin/loadtest.rs"
required-features = ["binaries"]
